# TapeStructure

./: .clang-format  .gitignore  CMakeLists.txt  README.md  launch.sh
lib/: CMakeLists.txt  config_reader.cpp  config_reader.h  tape.cpp  tape.h  tape.hpp  tape_sorter.cpp  tape_sorter.h
lib/chunk/: chunk.cpp  chunk.hpp
lib/config_reader/: CMakeLists.txt  simple_yaml_reader.cpp  simple_yaml_reader.hpp
lib/delays/: delays.cpp  delays.hpp
lib/sorter/: tape_sorter.cpp  tape_sorter.hpp
tests/: CMakeLists.txt  tape_sorter_test.cpp
tests/static/: config1.cfg  config1.yaml  config2.cfg  config2.yaml  config3.yaml  input1.in  input2.in
